fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,6 @@
     scroll-behavior: smooth;
 }
 
-
 ::-webkit-scrollbar {
     display: none;
-}
-
-body {
-    overflow-x: hidden;
 }
